@@ -16,6 +16,7 @@
 
 package com.badlogic.gdx.tests;
 
+import java.util.Iterator;
 import java.util.Random;
 
 import com.badlogic.gdx.math.MathUtils;
@@ -136,6 +137,16 @@ public class CollectionsTest extends GdxTest {
 			invoke("put", anotherMap, keys[(i + 1) % keys.length], values[i]);
 			assertNotEquals(map, anotherMap);
 		}
+
+		// perform an iteration test
+		Object anotherMap = copy(map);
+		Iterator it = ((Iterable) anotherMap).iterator();
+		int iterationCount = 0;
+		while (it.hasNext()) {
+			Object entry = it.next();
+			iterationCount++;
+		}
+		assertEquals(iterationCount, keys.length);
 	}
 
 	private void testArray (Class<?> arrayClass, Object[] values) {
